// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsRouteEditForm > renders correctly when adding new route 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Station specific details"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 pb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-54222bb8=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups="[object Object],[object Object]"
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="false"
                hint="Where is this produced?"
                inverted="false"
                isgroupedselect="true"
                issingleselect="true"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="station"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Product speed
        </div>
        <div
          class="text-body-medium text-secondary-text position-relative text-align-center full-width"
          data-v-44323e6a=""
          id="secondary-subtitle"
        >
          <span
            class="secondary-segment-title"
            data-v-44323e6a=""
          >
            Please define target speed
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-44323e6a=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
        </div>
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="good-production"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  ≤60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-with-selector-stub
                  data-v-54222bb8=""
                  hint="Target speed"
                  items="[object Object],[object Object],[object Object],[object Object]"
                  modelmodifiers="[object Object]"
                  modelvalue="1"
                  persistent-hint=""
                  rules="true"
                  selecteditem="UNIT_PER_MINUTE"
                  type="number"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="speedloss"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="#FDF502"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                   ≤180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-stub
                  data-v-54222bb8=""
                  disabled=""
                  filled="true"
                  grow="false"
                  hint="Speed loss"
                  modelvalue="60<Speed loss≤240"
                  suffix="sec"
                  truncateinput="false"
                  type="text"
                  usechip="false"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="stoppage"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="error"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  &gt;180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-number-input-stub
                  allowfloat="true"
                  allownegative="false"
                  data-v-54222bb8=""
                  grow="false"
                  hint="Downtime start time"
                  maxvalue="999999999999999"
                  modelvalue="180"
                  rules="true"
                  suffix="+60 sec"
                  usechip="false"
                />
              </span>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of units registered per one sensor signal"
                maxvalue="999999999999999"
                modelvalue="1"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-54222bb8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        id="primary-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsRouteEditForm > renders correctly when adding new route in mobile view 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Station specific details"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content dialog-content--mobile"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 pb-0"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-54222bb8=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups="[object Object],[object Object]"
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="false"
                hint="Where is this produced?"
                inverted="false"
                isgroupedselect="true"
                issingleselect="true"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="station"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Product speed
        </div>
        <div
          class="text-body-medium text-secondary-text position-relative text-align-center full-width"
          data-v-44323e6a=""
          id="secondary-subtitle"
        >
          <span
            class="secondary-segment-title"
            data-v-44323e6a=""
          >
            Please define target speed
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-44323e6a=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
        </div>
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-4"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="good-production"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="100%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  ≤60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-with-selector-stub
                  data-v-54222bb8=""
                  hint="Target speed"
                  items="[object Object],[object Object],[object Object],[object Object]"
                  modelmodifiers="[object Object]"
                  modelvalue="1"
                  persistent-hint=""
                  rules="true"
                  selecteditem="UNIT_PER_MINUTE"
                  type="number"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-4"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="speedloss"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="100%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="#FDF502"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                   ≤180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-stub
                  data-v-54222bb8=""
                  disabled=""
                  filled="true"
                  grow="false"
                  hint="Speed loss"
                  modelvalue="60<Speed loss≤240"
                  suffix="sec"
                  truncateinput="false"
                  type="text"
                  usechip="false"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-4"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="stoppage"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="100%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="error"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  &gt;180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-number-input-stub
                  allowfloat="true"
                  allownegative="false"
                  data-v-54222bb8=""
                  grow="false"
                  hint="Downtime start time"
                  maxvalue="999999999999999"
                  modelvalue="180"
                  rules="true"
                  suffix="+60 sec"
                  usechip="false"
                />
              </span>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of units registered per one sensor signal"
                maxvalue="999999999999999"
                modelvalue="1"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
    </div>
    <v-card-actions-stub
      class="fullscreen-card-actions"
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-54222bb8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        id="primary-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsRouteEditForm > renders correctly when editing route 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Station specific details"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 pb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-54222bb8=""
                disabled="false"
                disabledvalues="2"
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups="[object Object],[object Object]"
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="false"
                hint="Where is this produced?"
                inverted="false"
                isgroupedselect="true"
                issingleselect="true"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="1"
                numericorderby="false"
                placeholder="station"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Product speed
        </div>
        <div
          class="text-body-medium text-secondary-text position-relative text-align-center full-width"
          data-v-44323e6a=""
          id="secondary-subtitle"
        >
          <span
            class="secondary-segment-title"
            data-v-44323e6a=""
          >
            Please define target speed
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-44323e6a=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
        </div>
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="good-production"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  ≤120
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-with-selector-stub
                  data-v-54222bb8=""
                  hint="Target speed"
                  items="[object Object],[object Object],[object Object],[object Object]"
                  modelmodifiers="[object Object]"
                  modelvalue="30"
                  persistent-hint=""
                  rules="true"
                  selecteditem="UNIT_PER_HOUR"
                  type="number"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="speedloss"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="#FDF502"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                   ≤240
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  120
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-stub
                  data-v-54222bb8=""
                  disabled=""
                  filled="true"
                  grow="false"
                  hint="Speed loss"
                  modelvalue="120<Speed loss≤360"
                  suffix="sec"
                  truncateinput="false"
                  type="text"
                  usechip="false"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="stoppage"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="error"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  &gt;240
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  120
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-number-input-stub
                  allowfloat="true"
                  allownegative="false"
                  data-v-54222bb8=""
                  grow="false"
                  hint="Downtime start time"
                  maxvalue="999999999999999"
                  modelvalue="240"
                  rules="true"
                  suffix="+120 sec"
                  usechip="false"
                />
              </span>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <!--v-if-->
            <v-col-stub
              class="px-1 mb-2"
              cols="6"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of units registered per one sensor signal"
                maxvalue="999999999999999"
                modelvalue="2"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of scrap units registered per one sensor signal"
                id="product-based-scrap"
                maxvalue="999999999999999"
                modelvalue="1"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-with-selector-stub
                data-v-54222bb8=""
                hint="Alternative unit value"
                id="unit-conversion-field"
                items="[object Object],[object Object]"
                modelmodifiers="[object Object]"
                modelvalue="1"
                persistent-hint=""
                rules="true"
                selecteditem="PRIMARY_TO_ALT"
                type="number"
              />
            </v-col-stub>
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <delete-button-stub
        data-v-54222bb8=""
      />
      <v-spacer-stub
        data-v-54222bb8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        id="primary-button"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsRouteEditForm > renders correctly when selected station has timeModeActive as true 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Station specific details"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 pb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="true"
                coloractiveprepend="false"
                data-v-54222bb8=""
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups="[object Object],[object Object]"
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="false"
                hint="Where is this produced?"
                inverted="false"
                isgroupedselect="true"
                issingleselect="true"
                itemflag=""
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemtertiarytext=""
                itemtext="name"
                itemvalue="id"
                loading="false"
                menuinputtype="primary"
                modelvalue="1"
                numericorderby="false"
                placeholder="station"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <div
        class="text-center pa-4"
        data-v-44323e6a=""
      >
        <div
          class="text-body-large font-weight-bold"
          data-v-44323e6a=""
          id="secondaty-title"
        >
          Product speed
        </div>
        <div
          class="text-body-medium text-secondary-text position-relative text-align-center full-width"
          data-v-44323e6a=""
          id="secondary-subtitle"
        >
          <span
            class="secondary-segment-title"
            data-v-44323e6a=""
          >
            Please define target speed
          </span>
          <icon-with-tooltip-stub
            additionalclasses="ml-1 position-absolute"
            color=""
            data-v-44323e6a=""
            icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            iconclickedfn="[Function]"
            iconid=""
            iconsrc=""
            size="16"
            tooltiplocation="top"
            tooltiptext="Learn more"
          />
        </div>
      </div>
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          data-v-54222bb8=""
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="good-production"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  ≤60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-with-selector-stub
                  data-v-54222bb8=""
                  hint="Target speed"
                  items="[object Object],[object Object],[object Object],[object Object]"
                  modelmodifiers="[object Object]"
                  modelvalue="1"
                  persistent-hint=""
                  rules="true"
                  selecteditem="UNIT_PER_MINUTE"
                  type="number"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="speedloss"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="#FDF502"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                   ≤180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-v-input-stub
                  data-v-54222bb8=""
                  disabled=""
                  filled="true"
                  grow="false"
                  hint="Speed loss"
                  modelvalue="60<Speed loss≤240"
                  suffix="sec"
                  truncateinput="false"
                  type="text"
                  usechip="false"
                />
              </span>
            </v-col-stub>
            <v-col-stub
              class="px-1 d-flex flex-column align-center mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="4"
              tag="div"
              xl="false"
              xxl="false"
            >
              <v-img-stub
                absolute="false"
                alt="stoppage"
                cover="false"
                data-v-54222bb8=""
                eager="false"
                inline="false"
                maxheight="80"
                options="[object Object]"
                src="imageAsset"
                tile="false"
                transition="fade-transition"
                width="80%"
              />
              <div
                class="speed-block"
                data-v-54222bb8=""
              >
                <v-icon-stub
                  class="mr-1"
                  color="error"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  &gt;180
                </span>
                <span
                  data-v-54222bb8=""
                >
                  sec + 
                </span>
                <v-icon-stub
                  class="mx-1"
                  color="primary"
                  data-v-54222bb8=""
                  disabled="false"
                  end="false"
                  size="8"
                  start="false"
                  tag="i"
                >
                  M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
                </v-icon-stub>
                <span
                  class="font-weight-medium mr-1"
                  data-v-54222bb8=""
                >
                  60
                </span>
                 sec
              </div>
              <span
                class="full-width"
                data-v-54222bb8=""
              >
                <evocon-number-input-stub
                  allowfloat="true"
                  allownegative="false"
                  data-v-54222bb8=""
                  grow="false"
                  hint="Downtime start time"
                  maxvalue="999999999999999"
                  modelvalue="180"
                  rules="true"
                  suffix="+60 sec"
                  usechip="false"
                />
              </span>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            data-v-54222bb8=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Target time"
                maxvalue="999999999999999"
                rules="Target time"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="6"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of units registered per one sensor signal"
                maxvalue="999999999999999"
                modelvalue="1"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              data-v-54222bb8=""
              lg="false"
              md="false"
              sm="6"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-number-input-stub
                allowfloat="true"
                allownegative="false"
                data-v-54222bb8=""
                grow="false"
                hint="Number of scrap units registered per one sensor signal"
                id="product-based-scrap"
                maxvalue="999999999999999"
                modelvalue="1"
                rules="true"
                usechip="false"
              />
            </v-col-stub>
            <!--v-if-->
            <!--v-if-->
          </v-row-stub>
        </v-form-stub>
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        data-v-54222bb8=""
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        data-v-54222bb8=""
        icon=""
        iconcolor=""
        id="primary-button"
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
